bluec-tests/tests/invalid/expr_alignof/alignof_cast.c
int main(void) {
    return _Alignof(char) 1;
}